--- a/1_Data_Cleaning.ipynb
+++ b/1_Data_Cleaning.ipynb
@@ -23,6 +23,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# *Questions:* \n",
+    "* Which are the main topics during the year? \n",
+    "* \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
